--- a/docs/notebooks/0_MonPremierNotebook.ipynb
+++ b/docs/notebooks/0_MonPremierNotebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My first notebook"
+    "## Les cellules"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Premiere sous section nb\n",
+    "## Deuxième sous section nb\n",
     "\n",
     "Ceci est une cellule de texte écrite en markdown. On peut double cliquer dessus pour voir le code markdown qui y correspond et le changer. Quand on l'exécute, le code markdown se transforme en une jolie mise en forme. Ce langage nous permettra d'intégrer facilement différentes mises en forme avec nos programmes. On pourra ainsi entre-autres intégrer:\n",
     "+ des titres, sous titres... avec l'opérateur #\n",
