--- a/docs/notebooks/1_Images.ipynb
+++ b/docs/notebooks/1_Images.ipynb
@@ -4,12 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction à la  manipulation d'images\n",
+    "## Objectifs et durée\n",
     "\n",
-    "\n",
-    "## objectifs\n",
-    "\n",
-    "L'objectif de ce cours est de vous familiariser aux bases du traitement d'images. L'objectif sera d'abord de découvrir de quelle manière les images sont généralement représentées de façon numérique en programmant des outils permettant de dessiner des motifs simples sur une image. Suite à ça l'objectif sera de réinvestir ces connaissances et compétences dans des exercices de traitement du signal permettant d'aller jusqu'à résoudre des problèmes classiques en science de la vie.\n",
+    "L'objectif de ce cours est de vous familiariser aux bases du traitement d'images. L'objectif sera d'abord de découvrir de quelle manière les images sont généralement représentées de façon numérique en programmant des outils permettant de dessiner des motifs simples sur une image. Il permettra de déboucher sur des exercices de traitement du signal permettant d'aller jusqu'à résoudre des problèmes classiques en science de la vie. Il faudra compter environ 12 périodes pour le réaliser en classe.\n",
     "\n",
     "## Utilisation des librairies standards\n",
     "\n",
@@ -170,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Représentation des images au format numérique\n",
+    "## Représentation des images au format numérique\n",
     "\n",
     "Les images numériques sont représentées de deux façons: soit elles sont pixelisées, soit elles sont au format vectoriel. Ici nous nous intéresserons au **format pixel**. Les images pixelisées sont découpées sous forme d'une grille de pixels, et pour chaque pixel le niveau de gris ou la couleur est définie à l'aide d'un ou respectivement 3 nombres. Ces nombres sont généralement définis en 8 bits (8 zéros ou uns), ce qui donne un nombre pouvant aller de 0 à 255 compris.\n",
     "\n",
