--- a/docs/notebooks/HistoireDeBugs.ipynb
+++ b/docs/notebooks/HistoireDeBugs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objectif et durée\n",
+    "## Objectif et durée\n",
     "\n",
     "L'objectif de cette séquence est de corriger des erreurs ou mauvaises pratqiue communément vues en classe. Il est possible de réaliser cette séquence en une période."
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "\n",
     "Je vous présente Bob, un jeune élève qui apprend l'informatique. Il manquait probablement un peu de sommeil car il a réussi à écrire une série un notebook truffé de bugs. Vous allez aider Bob à distance en corrigeant son code et en lui expliquant quel était son problème en dessous de la cellule bogguée. Attention, c'était une dure journée pour Bob et il pourra y avoir plusieurs bugs par cellule. Nous partirons de la cellule de code suivante qui n'est pas bogguée."
    ]
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Création d'image\n",
+    "## Création d'image\n",
     "\n",
     "Bob veut créer une image et la modifier pour que le premier pixel soit blanc, voici ce qu'il a écrit:"
    ]
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Définition de fonctions utiles\n",
+    "## Définition de fonctions utiles\n",
     "Il souhaite maintenant définir deux fonctions. Une qui affiche la taille d'une image donnée en argument, et l'autre qui affiche l'image donnée en argument, avec ce code:"
    ]
   },
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modification d'une ligne de l'image\n",
+    "## Modification d'une ligne de l'image\n",
     "Bob veut maintenant que la première ligne d'une image de 10x10 pixels soit blanche et le reste noir. Il écrit un code qui ne fait pas d'erreur mais qui ne fait pas ce qu'il veut. Voici son code:"
    ]
   },
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compter les pixels blancs\n",
+    "## Compter les pixels blancs\n",
     "Bob écrit une fonction qui permet de compter les pixels ayant une valeur de 255 dans une image. Il écrit cette fonction qui marche mais son enseignant lui dit que ça n'est pas bon..."
    ]
   },
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retournement horizontal\n",
+    "## Retournement horizontal\n",
     "\n",
     "Enfin Bob veut écrire une fonction qui fait un retournement horizontal d'une image donnée en argument de la fonction. Encore une fois, Bob ne voit pas de bug mais son enseignant n'est tout de même pas satisfait. Bob n'oublie pas que c'est pour son bien que son enseignant pinaille parfois :)"
    ]
