--- a/docs/notebooks/2_Cellules.ipynb
+++ b/docs/notebooks/2_Cellules.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objectifs et durée\n",
+    "# Application aux sciences de la vie\n",
+    "\n",
+    "## Objectifs et durée\n",
     "\n",
     "Cette séquence a pour objectif de consolider les connaissances en manipulation d'images, de pratiquer les outils algorithmiques standards, de découvrir le domaine du traitement du signal et d'explorer la notion de complexité algorithmique. Il faudra compter une douzaine de période pour la réaliser. \n"
    ]
@@ -13,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problème: Compter les cellules\n",
+    "## Problème: Compter les cellules\n",
     "\n",
     "Le traitement des images est beaucoup utilisé dans le domaine médical. Dans cette activité nous allons nous mettre dans la peau d'un chercheur en sciences de la vie et découvrir le type de problème que nous pourrions renncontrer: nnous obtenons des images de cellules de notre microscope, similaire à celle ci-dessous, et pour faire avancer notre recherche nous devons trouver un moyen efficace pour compter les cellules présentes dans chaque image.\n",
     "\n",
@@ -118,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stratégie: lire, segmenter, filtrage, grouper, compter\n",
+    "## Stratégie: lire, segmenter, filtrage, grouper, compter\n",
     "\n",
     "Pour compter automatiquement les cellules, voici l'approche que nous allons utiliser:\n",
     "\n",
@@ -131,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lire\n",
+    "### Lire\n",
     "\n",
     "Pour différencier les pixels du fond des pixels des cellules, le motif de l'image pourrait être utilisé, mais il y a plus simple. L'intensité lumineuse suffira et c'est ce que nous utiliserons. Comme le centre des cellules est le plus lumineux sur le canal vert, nous allons récupérer l'image 2D correspondante à ce canal pour faire notre segmentation.\n",
     "\n",
@@ -171,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Segmenter\n",
+    "### Segmenter\n",
     "\n",
     "Nous aimerions compter le nombre de cellule dans cette image. Pour cela on va d'abord séparer les pixels correspondants à des cellules du reste. Cela est possible puisque les cellules sont plus claires que le fond. On pourra donc séléctionner un seuil et exécuter un programme pour segmenter notre image en fonction de ce seuil: Si l'intensité du pixel est supérieur au seuil alors le pixel sera considéré comme appartenant à une cellule, sinon non. Le résultat sera stocké dans une nouvelle image appellée `image_segmentee`.\n",
     "\n",
@@ -243,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtrage\n",
+    "### Filtrage\n",
     "\n",
     "Comme vous pouvez probablement le voir, il n'est pas possible de trouver un seuil qui permette d'isoler proprement le noyau des cellules du fond. Or pour compter les cellules c'est nécessaire de le faire, car nous serons amenés à compter les groupes de pixels à 1 qui sont connectés. Pour résoudre le problème nous allons filtrer notre image de départ, comme si nous souhaitions le voir à travers de lunettes pleines de buée. En floutant notre image, les pixels de forte intensité qui sont isolés disparaitront.\n",
     "\n",
@@ -309,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grouper\n",
+    "### Grouper\n",
     "\n",
     "A présent nous devrions avoir deux noyaux qui sont mis en évidence dans notre image `img_segmentee`. Pour compter ces noyaux il va falloir être capable de faire reconnaitre à l'ordinateur que tous les pixels blancs du premier noyaux sont connectés entre eux, et qu'ils ne sont pas connectés à ceux du deuxième noyau.\n",
     "\n",
@@ -392,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compter\n",
+    "### Compter\n",
     "\n",
     "Chaque pixel est identifié maintenant avec une valeur correspondant à un identifiant de groupe. Et chaque cellule correspond comme on le voit dans la visualisation précédente à un seul groupe. Pour compter le nombre de cellule, il ne nous reste plus qu'à identifier combien d'identifiants de groupe différents il y a.\n",
     "\n",
@@ -430,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elements connectés - version avancée\n",
+    "## Elements connectés - version avancée\n",
     "\n",
     "Alors que la solution utilisée précédemment est intuitive, elle n'est absolument pas efficace: dans le pire des cas le programme devra passer à travers toute l'image et cela pour chaque pixel (complexité de O(N^2)). Vous pouvez tester les limites de cette approche en appliquant ce programme non plus à une section de l'image de 100x100 mais à l'image de départ et vous verrez le temps que cela prend...\n",
     "\n",
@@ -532,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alternatives\n",
+    "## Alternatives\n",
     "\n",
     "Aurait-il été possible de faire sans filtrage ?"
    ]
