--- a/docs/notebooks/HistoireDeBugs.ipynb
+++ b/docs/notebooks/HistoireDeBugs.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Histoire de bugs\n",
+    "\n",
     "## Objectif et durée\n",
     "\n",
     "L'objectif de cette séquence est de corriger des erreurs ou mauvaises pratqiue communément vues en classe. Il est possible de réaliser cette séquence en une période."
